adjusts support tools page

--- a/provisioner/templates/provisioner/home.html
+++ b/provisioner/templates/provisioner/home.html
@@ -1,11 +1,11 @@
-{% extends 'provisioner/base.html' %}
+{% extends 'supporttools/base.html' %}
 
 {% block content %}
 <div class="container">
 
     <h2>MCSA Provisioning Status</h2>
 
-<p>
+<p class=lead">
 Provisioning monitoring and reporting will be found here.
 </p>
 <p>
