support page polish

--- a/provisioner/templates/provisioner/base.html
+++ b/provisioner/templates/provisioner/base.html
@@ -35,7 +35,7 @@
 <script type="text/javascript">
 window.provisioner = {
     event_update_frequency: {{EVENT_UPDATE_FREQ}},
-    import_update_frequency: {{IMPORT_UPDATE_FREQ}}
+    subscription_update_frequency: {{SUBSCRIPTION_UPDATE_FREQ}}
 };
 </script>
 
