--- a/provisioner/templates/provisioner/jobs.html
+++ b/provisioner/templates/provisioner/jobs.html
@@ -4,7 +4,7 @@
 
 <h2>Manage Provisioning Jobs</h2>
 
-<div class="user-manager pull-left">
+<div class="subscriptions pull-left">
     <div class="query-tabs clearfix">
       <table id="jobs-table" class="admin-table table table-striped">
         <thead>
