--- a/provisioner/templates/provisioner/jobs.html
+++ b/provisioner/templates/provisioner/jobs.html
@@ -12,6 +12,7 @@
             <th>Job</th>
             <th>Last Run</th>
             <th>Last Changed</th>
+            <th>Last Changed By</th>
             <th>Status</th>
           </tr>
         </thead>
